Fixed nav left border and alignment

--- a/Web/styles.css
+++ b/Web/styles.css
@@ -41,18 +41,18 @@ nav {
   height: 50px;
   background-color: white;
   border-top: 3px solid gray;
-  border-bottom: 2px solid gray;
+  border-bottom: 3px solid gray;
 }
 
 /* The nav section will contain 2 divs. */
 
 .navleft {
   width: 493px;
-  height: 45px;
+  height: 44px;
   background-color: white;
   float: left;
   text-align: center;
-  padding-top: 5px;
+  padding-top: 6px;
 }
 
 .navleft a {
